[gd_scene load_steps=21 format=2]

[ext_resource path="res://assets/backgrounds/Menu_Background.png" type="Texture" id=1]
[ext_resource path="res://assets/fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://menus/secundary_menus/SettingsMenu.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/icons/Return_Arrow_Pressed.png" type="Texture" id=4]
[ext_resource path="res://assets/icons/Return_Arrow_Original.png" type="Texture" id=5]
[ext_resource path="res://assets/icons/Return_Arrow_Hoover.png" type="Texture" id=6]
[ext_resource path="res://menus/main_menus/MainMenu.gd" type="Script" id=7]

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 10
border_color = Color( 0, 0.117647, 0.654902, 1 )
border_blend = true

[sub_resource type="DynamicFont" id=12]
size = 29
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.176471, 1, 0, 1 )
border_blend = true

[sub_resource type="DynamicFontData" id=3]
font_path = "res://assets/fonts/Xolonium-Regular.ttf"

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = SubResource( 3 )

[sub_resource type="DynamicFontData" id=4]
font_path = "res://assets/fonts/Xolonium-Regular.ttf"

[sub_resource type="DynamicFont" id=5]
size = 24
font_data = SubResource( 4 )

[sub_resource type="DynamicFont" id=6]
size = 30
font_data = SubResource( 4 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0, 0, 0, 1 )
border_width_top = 5
border_width_bottom = 5
border_color = Color( 0.815686, 0.384314, 0, 1 )
border_blend = true

[sub_resource type="DynamicFont" id=7]
size = 23
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.780392, 0, 0, 1 )
border_blend = true

[sub_resource type="DynamicFont" id=9]
size = 29
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=13]
size = 20
font_data = ExtResource( 2 )

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource( 7 )

[node name="BackgroundColor" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )

[node name="MenuTexture" type="TextureRect" parent="BackgroundColor"]
modulate = Color( 1, 1, 1, 0.509804 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true

[node name="GameTitlePanel" type="PanelContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -201.0
margin_top = 50.0
margin_right = 201.0
margin_bottom = 153.0
mouse_filter = 2
custom_styles/panel = SubResource( 11 )
__meta__ = {
"_edit_group_": true
}

[node name="GameTitle" type="Label" parent="GameTitlePanel"]
margin_left = 3.0
margin_top = 30.0
margin_right = 399.0
margin_bottom = 65.0
custom_fonts/font = SubResource( 12 )
text = "SP4CE SURVIVAL"
align = 1
valign = 1

[node name="MainElementsPanel" type="PanelContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -252.0
margin_top = -202.0
margin_right = 252.0
margin_bottom = 202.0
grow_horizontal = 2
grow_vertical = 2
custom_styles/panel = SubResource( 1 )

[node name="MainElementsContainer" type="VBoxContainer" parent="MainElementsPanel"]
margin_left = 3.0
margin_top = 3.0
margin_right = 503.0
margin_bottom = 443.0
custom_constants/separation = 25

[node name="Separation4" type="Control" parent="MainElementsPanel/MainElementsContainer"]
margin_right = 500.0

[node name="DifficultyLabelsContainer" type="HBoxContainer" parent="MainElementsPanel/MainElementsContainer"]
margin_top = 25.0
margin_right = 500.0
margin_bottom = 55.0
custom_constants/separation = 10

[node name="Control" type="Control" parent="MainElementsPanel/MainElementsContainer/DifficultyLabelsContainer"]
margin_bottom = 30.0

[node name="DifficultyLabel" type="Label" parent="MainElementsPanel/MainElementsContainer/DifficultyLabelsContainer"]
margin_left = 10.0
margin_right = 296.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 2 )
text = "CHOSEN_DIFFICULTY:"

[node name="DifficultySelectedLabel" type="Label" parent="MainElementsPanel/MainElementsContainer/DifficultyLabelsContainer"]
margin_left = 306.0
margin_right = 306.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 2 )

[node name="DifficultyLevelsContainer" type="HBoxContainer" parent="MainElementsPanel/MainElementsContainer"]
margin_top = 80.0
margin_right = 500.0
margin_bottom = 130.0
rect_min_size = Vector2( 0, 50 )
custom_constants/separation = 47
alignment = 1

[node name="EasyButton" type="Button" parent="MainElementsPanel/MainElementsContainer/DifficultyLevelsContainer"]
margin_left = 55.0
margin_right = 140.0
margin_bottom = 50.0
rect_min_size = Vector2( 80, 0 )
custom_fonts/font = SubResource( 5 )
text = "EASY"

[node name="MediumButton" type="Button" parent="MainElementsPanel/MainElementsContainer/DifficultyLevelsContainer"]
margin_left = 187.0
margin_right = 309.0
margin_bottom = 50.0
rect_min_size = Vector2( 80, 0 )
custom_fonts/font = SubResource( 5 )
text = "MEDIUM"

[node name="HardButton" type="Button" parent="MainElementsPanel/MainElementsContainer/DifficultyLevelsContainer"]
margin_left = 356.0
margin_right = 444.0
margin_bottom = 50.0
rect_min_size = Vector2( 80, 0 )
custom_fonts/font = SubResource( 5 )
text = "HARD"

[node name="Separation" type="Control" parent="MainElementsPanel/MainElementsContainer"]
margin_top = 155.0
margin_right = 500.0
margin_bottom = 175.0
rect_min_size = Vector2( 500, 20 )

[node name="PlayButton" type="Button" parent="MainElementsPanel/MainElementsContainer"]
margin_top = 200.0
margin_right = 500.0
margin_bottom = 275.0
rect_min_size = Vector2( 0, 75 )
custom_fonts/font = SubResource( 6 )
text = "PLAY"

[node name="Separation2" type="Control" parent="MainElementsPanel/MainElementsContainer"]
margin_top = 300.0
margin_right = 500.0
margin_bottom = 320.0
rect_min_size = Vector2( 0, 20 )

[node name="OnlineElementsPanel" type="PanelContainer" parent="MainElementsPanel/MainElementsContainer"]
margin_top = 345.0
margin_right = 500.0
margin_bottom = 405.0
rect_min_size = Vector2( 0, 50 )
custom_styles/panel = SubResource( 10 )

[node name="OnlineElementsContainer" type="HBoxContainer" parent="MainElementsPanel/MainElementsContainer/OnlineElementsPanel"]
margin_top = 5.0
margin_right = 500.0
margin_bottom = 55.0
rect_min_size = Vector2( 0, 40 )
custom_constants/separation = 37
alignment = 1

[node name="ProfileButton" type="Button" parent="MainElementsPanel/MainElementsContainer/OnlineElementsPanel/OnlineElementsContainer"]
margin_left = 47.0
margin_right = 207.0
margin_bottom = 50.0
rect_min_size = Vector2( 160, 50 )
custom_fonts/font = SubResource( 7 )
text = "PROFILE"

[node name="LeaderboardButton" type="Button" parent="MainElementsPanel/MainElementsContainer/OnlineElementsPanel/OnlineElementsContainer"]
margin_left = 244.0
margin_right = 453.0
margin_bottom = 50.0
rect_min_size = Vector2( 160, 0 )
custom_fonts/font = SubResource( 7 )
text = "LEADERBOARD"

[node name="Separation3" type="Control" parent="MainElementsPanel/MainElementsContainer"]
margin_top = 430.0
margin_right = 500.0
margin_bottom = 440.0
rect_min_size = Vector2( 0, 10 )

[node name="OptionsAndExitElementsPanel" type="PanelContainer" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -180.0
margin_top = -130.0
margin_right = -20.0
margin_bottom = -50.0
rect_rotation = 0.0894657
custom_styles/panel = SubResource( 8 )

[node name="OptionsAndExitElementsContainer" type="VBoxContainer" parent="OptionsAndExitElementsPanel"]
margin_left = 3.0
margin_top = 3.0
margin_right = 158.0
margin_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
custom_constants/separation = 15
alignment = 1

[node name="OptionsButton" type="Button" parent="OptionsAndExitElementsPanel/OptionsAndExitElementsContainer"]
margin_right = 155.0
margin_bottom = 41.0
custom_fonts/font = SubResource( 9 )
text = "OPTIONS"

[node name="ExitButton" type="Button" parent="OptionsAndExitElementsPanel/OptionsAndExitElementsContainer"]
margin_top = 56.0
margin_right = 155.0
margin_bottom = 97.0
custom_fonts/font = SubResource( 9 )
text = "EXIT"

[node name="ReturnWelcomeMenu" type="TextureButton" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -40.0
margin_right = 150.0
margin_bottom = 40.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 6 )
expand = true

[node name="OnlineModeLabel" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 13 )
text = "ONLINE_MODE"

[node name="SettingsMenu" parent="." instance=ExtResource( 3 )]
layer = 2
visible = false

[connection signal="pressed" from="MainElementsPanel/MainElementsContainer/DifficultyLevelsContainer/EasyButton" to="." method="_on_EasyButton_pressed"]
[connection signal="pressed" from="MainElementsPanel/MainElementsContainer/DifficultyLevelsContainer/MediumButton" to="." method="_on_MediumButton_pressed"]
[connection signal="pressed" from="MainElementsPanel/MainElementsContainer/DifficultyLevelsContainer/HardButton" to="." method="_on_HardButton_pressed"]
[connection signal="pressed" from="MainElementsPanel/MainElementsContainer/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="MainElementsPanel/MainElementsContainer/OnlineElementsPanel/OnlineElementsContainer/ProfileButton" to="." method="_on_ProfileButton_pressed"]
[connection signal="pressed" from="MainElementsPanel/MainElementsContainer/OnlineElementsPanel/OnlineElementsContainer/LeaderboardButton" to="." method="_on_LeaderboardButton_pressed"]
[connection signal="pressed" from="OptionsAndExitElementsPanel/OptionsAndExitElementsContainer/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="OptionsAndExitElementsPanel/OptionsAndExitElementsContainer/ExitButton" to="." method="_on_ExitButton_pressed"]
[connection signal="pressed" from="ReturnWelcomeMenu" to="." method="_on_ReturnWelcomeMenu_pressed"]
